--- a/app/frontend/assets/styles/app.scss
+++ b/app/frontend/assets/styles/app.scss
@@ -26,3 +26,4 @@
 @import "./components/messages";
 @import "./components/change-location";
 @import "./components/dashboard";
+@import "./components/sidesheet";
