--- a/app/frontend/assets/styles/components/_dashboard.scss
+++ b/app/frontend/assets/styles/components/_dashboard.scss
@@ -284,3 +284,20 @@ canvas {
         }
     }
 }
+
+.section--dashboard {
+    .container__flex {
+        &.flex--wide {
+            display: flex;
+            justify-content: space-between;
+
+            > * {
+                flex: 0 0 auto;
+            }
+
+            h2 {
+                margin: 0 0 0.25em;
+            }
+        }
+    }
+}
