--- a/app/frontend/assets/styles/components/_dashboard.scss
+++ b/app/frontend/assets/styles/components/_dashboard.scss
@@ -290,6 +290,7 @@ canvas {
         &.flex--wide {
             display: flex;
             justify-content: space-between;
+            margin: 2em 0 0.25em;
 
             > * {
                 flex: 0 0 auto;
