--- a/app/apps/main/templates/melding/part_taak_starten.html
+++ b/app/apps/main/templates/melding/part_taak_starten.html
@@ -35,7 +35,16 @@
                   novalidate>
                 {% csrf_token %}
                 {{ form.errors }}
-                <div class="form-control__with-helptext">{{ form.categorie|render_rotterdam_formulier }}</div>
+                <div class="form-control__with-helptext">
+                    <div class="form-row">
+                        <label>Selecteer een taak</label>
+                        <div>
+                            {{ form.onderwerp_gerelateerd_taaktype }}
+                            <p class="help-block invalid-text no-margin"></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-control__with-helptext">{{ form.afdeling|render_rotterdam_formulier }}</div>
                 <div class="form-control__with-helptext">
                     <div class="form-row">
                         <label>Selecteer een taak</label>
