Styling dashboard settings/navigation

--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -626,6 +626,10 @@ body.no-js {
     margin: 0 !important;
 }
 
+.margin-top {
+    margin-top: 1em;
+}
+
 .no-margin-top {
     margin-top: 0 !important;
 }
