Styling meldingen / taken

--- a/app/apps/dashboard/templates/dashboard/base.html
+++ b/app/apps/dashboard/templates/dashboard/base.html
@@ -17,9 +17,11 @@
             <h1 class="no-margin-top">Dashboard</h1>
             <div class="margin-top">
                 {% comment %} <ul class="list-horizontal">
-                    <li class="label">Toon</li>
                     <li>
                         <span class="btn-state btn btn-state--active">Meldingen</span>
+                    </li>
+                    <li>
+                        <span class="btn-state btn btn-state--disabled">Taken</span>
                     </li>
                 </ul> {% endcomment %}
                 <ul class="list-horizontal">
