--- a/app/apps/main/templates/melding/part_taak_starten.html
+++ b/app/apps/main/templates/melding/part_taak_starten.html
@@ -37,7 +37,7 @@
                 {{ form.errors }}
                 <div class="form-control__with-helptext">
                     <div class="form-row">
-                        <label>Selecteer een taak</label>
+                        <label>Vaak gekozen bij dit type melding</label>
                         <div>
                             {{ form.onderwerp_gerelateerd_taaktype }}
                             <p class="help-block invalid-text no-margin"></p>
