--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -283,6 +283,24 @@ textarea {
         }
     }
 
+    &-filter {
+        width: auto;
+        height: 2em;
+        line-height: 2em;
+        font-size: 0.7em;
+        background-color: $white;
+        padding: 0 $input-padding-x;
+        span {
+            padding-left: 0 !important;
+            padding-right: 0 !important;
+        }
+        &:hover,
+        &:focus {
+            background-color: $green-600;
+            transition: all 0.15s ease-in;
+        }
+    }
+
     &.btn-state,
     &.btn-state--active {
         display: inline-block;
@@ -294,12 +312,15 @@ textarea {
         padding: $input-padding-y $input-padding-x;
         border-radius: 4px;
         margin-bottom: 0;
+        transition: all 0.15s ease-in;
 
+        &:hover,
+        &:focus,
         &--active,
         &--disabled {
             background-color: $green-600;
             color: $green-tint01;
-            font-weight: 700;
+            text-shadow: 1px 0 0 currentColor;
             cursor: default;
             box-sizing: border-box;
         }
@@ -309,14 +330,6 @@ textarea {
             background-color: $gray-tint02;
             color: $gray-tint06;
         }
-    }
-
-    &.btn-state:hover {
-        text-shadow: 1px 0 0 currentColor;
-    }
-    &.btn-state--active:hover,
-    &.btn-state--disabled:hover {
-        text-shadow: none;
     }
 
     &.btn-icon {
