--- a/app/apps/dashboard/templates/dashboard/base.html
+++ b/app/apps/dashboard/templates/dashboard/base.html
@@ -16,13 +16,27 @@
         <div class="container__filters">
             <div class="container__title">
                 <h1>Dashboard</h1>
-                <div>
+                <div class="filters">
                     <button type="button"
                             class="btn btn-filter"
                             data-action="sidesheet#toggleFilter">
                         {% include "icons/filter_v2.svg" %}
                         <span>Filters</span>
                     </button>
+                    <dl class="list-horizontal">
+                        <div>
+                            <dt>Onderwerp</dt>
+                            <dd class="pill">
+                                Grofvuil
+                            </dd>
+                        </div>
+                        <div>
+                            <dt>Wijk</dt>
+                            <dd class="pill">
+                                Delfshaven
+                            </dd>
+                        </div>
+                    </dl>
                 </div>
             </div>
             <div>
