--- a/app/frontend/assets/styles/components/_dashboard.scss
+++ b/app/frontend/assets/styles/components/_dashboard.scss
@@ -42,6 +42,39 @@ canvas {
                 min-width: 4em;
             }
         }
+
+        .filters {
+            display: flex;
+            justify-content: flex-start;
+            gap: 1em;
+
+            dl {
+                font-size: 0.6em;
+                line-height: 2em;
+                margin-top: 0.55em;
+                div {
+                    margin-right: 0.5em;
+                    dt,
+                    dd {
+                        flex: 1;
+                        max-width: none;
+                        line-height: 2em;
+                    }
+                    dt {
+                        padding-right: 0.25em;
+                    }
+                }
+
+                .pill {
+                    background-color: $green-600;
+                    color: $green-tint01;
+                    font-weight: 700;
+                    box-sizing: border-box;
+                    border-radius: 2em;
+                    padding: 0 0.5em;
+                }
+            }
+        }
     }
 }
 
