--- a/app/frontend/assets/styles/components/_sidesheet.scss
+++ b/app/frontend/assets/styles/components/_sidesheet.scss
@@ -75,7 +75,7 @@ body.show-sidesheet--dashboardfilter {
         z-index: 2105;
         background: transparent;
         top: $container-padding-x;
-        right: $container-padding-x;
+        right: calc($container-padding-x - 8px);
         min-width: 20px;
         min-height: 20px;
     }
@@ -90,8 +90,6 @@ body.show-sidesheet--dashboardfilter {
         background-color: $black;
         opacity: 0;
         display: none;
-        -webkit-backdrop-filter: blur(5px);
-        backdrop-filter: blur(5px);
     }
 
     &.sidesheet--dashboardfilter {
@@ -106,7 +104,11 @@ body.show-sidesheet--dashboardfilter {
             overflow-y: auto;
             transition: right 0.5s ease-in-out;
             box-sizing: border-box;
-            padding: $container-padding-x;
+            padding: 3em 1.5em 1.5em;
+
+            label small {
+                display: none;
+            }
         }
     }
 }
@@ -123,7 +125,7 @@ body.show-sidesheet {
 body.show-sidesheet-dashboardfilters {
     .sidesheet--dashboardfilter {
         left: 0;
-        backdrop-filter: blur(5px);
+        backdrop-filter: blur(2px);
 
         .content {
             right: 0;
